fix: switch to docker runtime

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 # SoundCloud Downloader
 scdl
 
-# Spotify Downloader (CLI для скачивания из Spotify через YouTube)
+# Spotify Downloader
 spotdl>=4.2.0
 
 # Shazam для распознавания музыки
 shazamio>=0.4.0
+
+# YouTube Downloader
+yt-dlp
