--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
 "dotenv": "^16.4.5",
 "genius-lyrics": "^4.4.0",
 "ejs": "^3.1.9",
-"puppeteer": "^22.0.0",
-"express": "^4.19.2",
-"cheerio": "^1.0.0",
-"express-ejs-layouts": "^2.5.1",
-"node-fetch": "^3.3.2",
-"soundcloud-downloader": "^1.0.0",
-"async-mutex": "^0.5.0",
-"express-session": "^1.17.3",
-"file-type": "^19.0.0",
-"https-proxy-agent": "^7.0.4",
-"json-2-csv": "^5.5.9",
-"p-map": "^7.0.0",
-"mime-types": "^2.1.35",
-"multer": "^1.4.5-lts.1",
+    "puppeteer": "^24.1.5",
+    "express": "^4.19.2",
+    "cheerio": "^1.0.0",
+    "express-ejs-layouts": "^2.5.1",
+    "node-fetch": "^3.3.2",
+    "soundcloud-downloader": "^1.0.0",
+    "async-mutex": "^0.5.0",
+    "express-session": "^1.17.3",
+    "file-type": "^19.0.0",
+    "https-proxy-agent": "^7.0.4",
+    "json-2-csv": "^5.5.9",
+    "p-map": "^7.0.0",
+    "mime-types": "^2.1.35",
+    "multer": "^2.0.0-rc.1",
 "node-cron": "^3.0.3",
 "p-limit": "^5.0.0",
 "p-queue": "^8.0.1",
