--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 "p-queue": "^8.0.1",
 "p-timeout": "^6.1.2",
 "redis": "^4.6.7",
+"ioredis": "^5.3.2",
 "telegraf": "^4.16.3",
 "ffmpeg-static": "^5.2.0",
 "youtube-dl-exec": "^2.0.1"
